# OrangeCat

./: .gitignore  CMakeLists.txt  README.md
res/: custom.crt  custom2.crt  server.pfx
res/web_root/: index.html  video.js
src/: CMakeLists.txt
src/paramserv/: CMakeLists.txt  configuru.hpp  loadbmp.h  parameterserver.cpp  parameterserver.h  simplethread.h  windllsupport.h
src/samples/: CMakeLists.txt  paramserv.cpp
